Skip to content
GitLab
Projects Groups Snippets
  • /
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Sign in / Register
  • gst-plugins-bad gst-plugins-bad
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 973
    • Issues 973
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 104
    • Merge requests 104
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Schedules
  • Deployments
    • Deployments
    • Environments
    • Releases
  • Packages and registries
    • Packages and registries
    • Container Registry
  • Monitor
    • Monitor
    • Incidents
  • Analytics
    • Analytics
    • Value stream
    • CI/CD
    • Repository
  • Snippets
    • Snippets
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • GStreamerGStreamer
  • gst-plugins-badgst-plugins-bad
  • Issues
  • #1126
Closed
Open
Issue created Nov 25, 2019 by Sergey Radionov@RSATom

`ice-gathering-state` logic is broken in `webrtcbin`

As mentioned in #676 (comment 318038) it just skips GATHERING and became COMPLETE even before first ice candidate come to on-ice-candidate event handler. Checked on Ubuntu 19.04 + GStreamer 1.15.90 and Ubuntu 19.10 + GStreamer 1.16.1. If it required, I can prepare demo for this issue, but you can easily see it in logs with webrtcbidirectional.c if just set GST_DEBUG=webrtcbin:5

Edited Nov 25, 2019 by Sergey Radionov
Assignee
Assign to
Time tracking